--- a/Compiler/CM1Compiler_CPP/DataStructures/DataStructures.vcxproj
+++ b/Compiler/CM1Compiler_CPP/DataStructures/DataStructures.vcxproj
@@ -191,6 +191,7 @@
     <ClInclude Include="ISerializationManager.hpp" />
     <ClInclude Include="IValueHolder.hpp" />
     <ClInclude Include="MetadataObject.hpp" />
+    <ClInclude Include="NameResolutionContext.hpp" />
     <ClInclude Include="Namespace.hpp" />
     <ClInclude Include="ObjectWithAccessibility.hpp" />
     <ClInclude Include="ObjectWithMetadata.hpp" />
@@ -224,6 +225,7 @@
     <ClCompile Include="Function.cpp" />
     <ClCompile Include="Generic\GenericObject.cpp" />
     <ClCompile Include="INamedObject.cpp" />
+    <ClCompile Include="NameResolutionContext.cpp" />
     <ClCompile Include="Namespace.cpp" />
     <ClCompile Include="QualifiedName.cpp" />
     <ClCompile Include="Target.cpp" />
