--- a/Compiler/CM1Compiler_CPP/DataStructures/DataStructures.vcxproj.filters
+++ b/Compiler/CM1Compiler_CPP/DataStructures/DataStructures.vcxproj.filters
@@ -150,6 +150,9 @@
     <ClInclude Include="IValueHolder.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="NameResolutionContext.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -225,6 +228,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="execution\IRuntimeValue.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="NameResolutionContext.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
