--- a/Compiler/CM1Compiler_CPP/DataStructures/DataStructures.vcxproj.filters
+++ b/Compiler/CM1Compiler_CPP/DataStructures/DataStructures.vcxproj.filters
@@ -233,5 +233,8 @@
     <ClCompile Include="NameResolutionContext.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="execution\BooleanValue.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
