--- a/Compiler/CM1Compiler_CPP/DataStructures/DataStructures.vcxproj
+++ b/Compiler/CM1Compiler_CPP/DataStructures/DataStructures.vcxproj
@@ -201,6 +201,7 @@
     <ClInclude Include="Target.hpp" />
     <ClInclude Include="Type.hpp" />
     <ClInclude Include="TypeClassifier.hpp" />
+    <ClInclude Include="TypeReference.hpp" />
     <ClInclude Include="Validation\ValidationError.hpp" />
     <ClInclude Include="Validation\ValidationUtility.hpp" />
     <ClInclude Include="Variable.hpp" />
@@ -232,6 +233,7 @@
     <ClCompile Include="Target.cpp" />
     <ClCompile Include="Type.cpp" />
     <ClCompile Include="TypeClassifier.cpp" />
+    <ClCompile Include="TypeReference.cpp" />
     <ClCompile Include="Validation\ValidationError.cpp" />
     <ClCompile Include="Validation\ValidationUtility.cpp" />
     <ClCompile Include="Variable.cpp" />
