--- a/Compiler/CM1Compiler_CPP/DataStructures/DataStructures.vcxproj.filters
+++ b/Compiler/CM1Compiler_CPP/DataStructures/DataStructures.vcxproj.filters
@@ -242,5 +242,8 @@
     <ClCompile Include="TypeReference.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Field.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
