--- a/Compiler/CM1Compiler_CPP/Compiler/Compiler.vcxproj.filters
+++ b/Compiler/CM1Compiler_CPP/Compiler/Compiler.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClInclude Include="Serialization\SerializationManager.hpp">
       <Filter>Header Files\Serialization</Filter>
     </ClInclude>
+    <ClInclude Include="Serialization\NameGetter.hpp">
+      <Filter>Header Files\Serialization</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CompilationUnitDatabaseBuilder.cpp">
@@ -117,6 +120,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Generic\GenericInstantiationUtility.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Serialization\NameGetter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
