--- a/Compiler/CM1Compiler_CPP/Compiler.Tests/Compiler.Tests.vcxproj.filters
+++ b/Compiler/CM1Compiler_CPP/Compiler.Tests/Compiler.Tests.vcxproj.filters
@@ -15,13 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Compiler.Tests.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="CompilationUnitDataBaseBuilderTestingUtility.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CompilationUnitDataBaseBuilderTests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
