--- a/Compiler/CM1Compiler_CPP/Compiler.Tests/Compiler.Tests.vcxproj.filters
+++ b/Compiler/CM1Compiler_CPP/Compiler.Tests/Compiler.Tests.vcxproj.filters
@@ -35,5 +35,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="CodeCoverage.runsettings" />
   </ItemGroup>
 </Project>
