--- a/Compiler/CM1Compiler_CPP/DataStructures/DataStructures.vcxproj.filters
+++ b/Compiler/CM1Compiler_CPP/DataStructures/DataStructures.vcxproj.filters
@@ -156,6 +156,9 @@
     <ClInclude Include="TypeReference.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="execution\RuntimePackageDescriptor.hpp">
+      <Filter>Header Files\Execution</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -243,6 +246,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Field.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="execution\RuntimePackageDescriptor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
