--- a/Compiler/CM1Compiler_CPP/FileSystem/FileSystem.vcxproj.filters
+++ b/Compiler/CM1Compiler_CPP/FileSystem/FileSystem.vcxproj.filters
@@ -3,7 +3,7 @@
   <ItemGroup>
     <Filter Include="Source Files">
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
     <Filter Include="Header Files">
       <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
@@ -15,26 +15,19 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="CLIInterface.hpp">
+    <ClInclude Include="File.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FileDiscovery.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config">
+    <ClCompile Include="File.cpp">
       <Filter>Source Files</Filter>
-    </None>
-    <None Include="compiler-interface\src\entry_point.cm" />
-    <None Include="compiler-interface\src\entry_point.cm" />
-    <None Include="compiler-interface\**\*.*">
-      <Filter>Resource Files</Filter>
-    </None>
-    <None Include="compiler-interface\**\*.*">
-      <Filter>Resource Files</Filter>
-    </None>
+    </ClCompile>
+    <ClCompile Include="FileDiscovery.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
