--- a/Compiler/CM1Compiler_CPP/CM1Compiler_CPP/CM1Compiler_CPP.vcxproj.filters
+++ b/Compiler/CM1Compiler_CPP/CM1Compiler_CPP/CM1Compiler_CPP.vcxproj.filters
@@ -29,12 +29,12 @@
       <Filter>Source Files</Filter>
     </None>
     <None Include="compiler-interface\src\entry_point.cm" />
-    <None Include="compiler-interface\src\entry_point.cm" />
     <None Include="compiler-interface\**\*.*">
       <Filter>Resource Files</Filter>
     </None>
     <None Include="compiler-interface\**\*.*">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="compiler-interface\**\*.*" />
   </ItemGroup>
 </Project>
