--- a/Compiler/CM1Compiler_CPP/Compiler/packages.config
+++ b/Compiler/CM1Compiler_CPP/Compiler/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="libLLVM" version="11.0.0" targetFramework="native" />
+  <package id="boost" version="1.76.0.0" targetFramework="native" />
+  <package id="boost_regex-vc141" version="1.76.0.0" targetFramework="native" />
   <package id="Microsoft.Gsl" version="0.1.2.1" targetFramework="native" />
 </packages>
